fixed column alignment

--- a/final-capstone-project/src/main/webapp/css/site.css
+++ b/final-capstone-project/src/main/webapp/css/site.css
@@ -49,6 +49,10 @@ Sample snippet page
 	padding-left: 25px;
 }
 
+#sample_snippets_title {
+	max-width: 125px;
+}
+
 /*********************/
 
 #testing { 
